--- a/example.env
+++ b/example.env
@@ -12,9 +12,12 @@ TELEGRAM_BOT_TOKEN=
 # Format: -1008888888888 (with -100 prefix)
 TELEGRAM_CHANNEL=-1008888888888
 
-# Google Gemini API Key
+# Google Gemini API Keys
 # Get from https://aistudio.google.com/app/apikey
+# Primary API key (50 requests/day free tier)
 GEMINI_API_KEY=your_gemini_api_key_here
+# Backup API key (optional, for fallback when primary quota exceeded)
+GEMINI_API_KEY_BACKUP=your_backup_gemini_api_key_here
 
 # YouTube Data API v3
 # Create OAuth 2.0 credentials in Google Cloud Console
