--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ google-auth>=2.31.0
 google-auth-oauthlib>=1.2.0
 google-auth-httplib2>=0.2.0
 google-genai>=0.6.0
+google-api-core>=2.14.0
 
 # Utilities
 python-dotenv>=1.0.1
