--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ google-api-core>=2.14.0
 python-dotenv>=1.0.1
 tenacity>=8.5.0
 numpy>=1.24.0
+psutil>=5.9.0
 
 # Optional: For advanced features (if needed)
 # playwright>=1.40.0  # Only if using HTML rendering
