--- a/config.ini
+++ b/config.ini
@@ -37,6 +37,17 @@ privacy_status = private
 category_id = 25
 client_secret_file = ${YOUTUBE_CLIENT_SECRET_FILE}
 
+[TWITTER]
+# Twitter/X API integration (бесплатно для текста и изображений)
+enabled = false
+# Получите ключи на https://developer.twitter.com/
+api_key = ${TWITTER_API_KEY}
+api_secret = ${TWITTER_API_SECRET}
+access_token = ${TWITTER_ACCESS_TOKEN}
+access_token_secret = ${TWITTER_ACCESS_TOKEN_SECRET}
+# Режим загрузки: image (бесплатно), video (Basic $100/мес), auto
+upload_mode = image
+
 [PATHS]
 music_dir = resources/music
 backgrounds_dir = resources/default_backgrounds
