--- a/example.env
+++ b/example.env
@@ -18,6 +18,10 @@ TELEGRAM_CHANNEL=-1008888888888
 GEMINI_API_KEY=your_gemini_api_key_here
 # Backup API key (optional, for fallback when primary quota exceeded)
 GEMINI_API_KEY_BACKUP=your_backup_gemini_api_key_here
+# Third backup API key (optional, for additional fallback)
+GEMINI_API_KEY_OTHER_BACKUP=your_third_gemini_api_key_here
+# Fourth API key with billing enabled (optional, used as last resort)
+GEMINI_API_KEY_BILLING=your_billing_enabled_gemini_api_key_here
 
 # YouTube Data API v3
 # Create OAuth 2.0 credentials in Google Cloud Console
