--- a/config.ini
+++ b/config.ini
@@ -1,36 +1,40 @@
+[GENERAL]
+# Основной конфиг (V2 HTML+Selenium как база проекта)
+upload_to_telegram = false
+telegram_shorts_news_path = D:\work\shorts_news
+
 [TELEGRAM]
-# Fill from environment or directly here
+# Подставляется из .env
 api_id = ${TELEGRAM_API_ID}
 api_hash = ${TELEGRAM_API_HASH}
-# Channel username (e.g., @mychannel) or channel ID (e.g., -1001234567890)
 channel = ${TELEGRAM_CHANNEL}
-startup_backfill = 1
+startup_backfill = 0
 poll_interval_seconds = 10
 
 [LLM]
 provider = gemini
-gemini_model = gemini-2.0-flash-exp
+gemini_model = gemini-2.0-flash
+# Для Ollama можно переключить через переменную окружения:
+#   LLM_PROVIDER=ollama
+# и задать:
+# ollama_model = gemma3:1b
+# ollama_url = http://localhost:11434
 
 [VIDEO]
-duration_seconds = 5
+# ВЕРСИЯ ГЕНЕРАТОРА
+generator_version = v2
+# Базовые параметры кадра
+duration_seconds = 6
 width = 1080
 height = 1920
-header_ratio = 0.4
-middle_ratio = 0.5
-footer_ratio = 0.1
-middle_bg_rgb = 40,40,40
-footer_bg_rgb = 0,0,0
+# Шрифт/источник подписи
 font_path = resources/fonts/Arsenal-Bold.ttf
 source_text = t.me/honeybadgerland
-header_zoom_start = 1.05
-header_zoom_end = 1.00
-middle_red_rgb = 180,30,30
-heartbeat_enabled = true
-heartbeat_cycle_seconds = 1.6
-heartbeat_height_ratio = 0.10
-heartbeat_opacity_main = 180
-heartbeat_opacity_glow = 80
-heartbeat_opacity_glow2 = 40
+# Шаблон V2 (новая основа проекта)
+v2_template_path = resources/templates/news_short_v3_glass.html
+v2_fps = 24
+v2_capture_method = cdp
+v2_headless = true
 
 [YOUTUBE]
 privacy_status = private
@@ -38,14 +42,11 @@ category_id = 25
 client_secret_file = ${YOUTUBE_CLIENT_SECRET_FILE}
 
 [TWITTER]
-# Twitter/X API integration (бесплатно для текста и изображений)
 enabled = false
-# Получите ключи на https://developer.twitter.com/
 api_key = ${TWITTER_API_KEY}
 api_secret = ${TWITTER_API_SECRET}
 access_token = ${TWITTER_ACCESS_TOKEN}
 access_token_secret = ${TWITTER_ACCESS_TOKEN_SECRET}
-# Режим загрузки: image (бесплатно), video (Basic $100/мес), auto
 upload_mode = image
 
 [PATHS]
